Removed comp install.

--- a/.github/actions/openemr-setup/action.yaml
+++ b/.github/actions/openemr-setup/action.yaml
@@ -99,7 +99,7 @@ runs:
       env:
         GITHUB_ACTION_PATH: ${{ github.action_path }}
 
-    - name: Install dependencies
-      run: |
-        composer install ${{ inputs.composer-install-args }}
-      shell: bash
+#    - name: Install dependencies
+#      run: |
+#        composer install ${{ inputs.composer-install-args }}
+#      shell: bash
