--- a/.github/workflows/ci-example-base.yaml
+++ b/.github/workflows/ci-example-base.yaml
@@ -16,14 +16,14 @@ jobs:
           - 'master'
       fail-fast: false
     steps:
-      - name: My first step - check out repository
-        uses: actions/checkout@v4
-
-      - name: Clone openEmr tag ${{ inputs.openemr-version }}
-        uses: actions/checkout@v4
-        with:
-          repository: openemr/openemr
-          ref: ${{ matrix.openemr-version }}
+#      - name: My first step - check out repository
+#        uses: actions/checkout@v4
+#
+#      - name: Clone openEmr tag ${{ inputs.openemr-version }}
+#        uses: actions/checkout@v4
+#        with:
+#          repository: openemr/openemr
+#          ref: ${{ matrix.openemr-version }}
 
       - name: Setup PHP and composer dependencies
         uses: './.github/actions/openemr-setup'
@@ -34,5 +34,5 @@ jobs:
 #      - name: show composer info
 #        run: composer info
 
-      - name: List files
-        run: ls -al
+#      - name: List files
+#        run: ls -al
